crates/willikins-providers-github/tests/snapshots/catalog_parity__github_repo_ensure_spec.snap
---
source: crates/willikins-providers-github/tests/catalog_parity.rs
assertion_line: 76
expression: repo
---
{
  "class": "reversible",
  "description": "Ensure a GitHub repository exists.",
  "inputs": {
    "repo": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "GitHubRepo"
      }
    },
    "token": {
      "required": false,
      "ty": {
        "kind": "exact",
        "type": "GitHubToken"
      }
    },
    "visibility": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "RepoVisibility"
      }
    }
  },
  "key": [
    "repo"
  ],
  "name": "github.repo.ensure",
  "outputs": {
    "repo": "GitHubRepo",
    "url": "HttpsUrl"
  },
  "pure": false
}
